# LearningOpenGL

./: .gitignore  README.md
Basics/: CMakeLists.txt  vcpkg.json
Basics/inc/: Camera.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  utils.hpp
Basics/shaders/: coolPyramidFragment.glsl  coolPyramidVertex.glsl  cubeFragment.glsl  cubeVertex.glsl  floorVertex.glsl  triangleFragment.glsl  triangleVertex.glsl
Basics/src/: Camera.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  main.cpp  utils.cpp
Lighting/: CMakeLists.txt
Lighting/inc/: Camera.hpp  Shader.hpp
Lighting/shaders/: coolPyramidFragment.glsl  coolPyramidVertex.glsl  cubeLightFragment.glsl  cubeVertex.glsl  floorFragment.glsl  floorVertex.glsl  lightingFragment.glsl  lightingVertex.glsl
Lighting/src/: Camera.cpp  Shader.cpp  Texture.cpp  main.cpp
